--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>CYM Leader Tracker</title>
 
 <style>
-body { font-family: Arial; margin:0; background:#f5f5f5; }
+body { font-family: Arial, sans-serif; margin:0; background:#f5f5f5; }
 header { background:#222; color:#fff; padding:1em; text-align:center; }
 .container { max-width:900px; margin:auto; padding:1em; }
 
@@ -26,11 +26,11 @@ header { background:#222; color:#fff; padding:1em; text-align:center; }
 
 .attendance-section { margin-top:2em; }
 
-.attendance-row { display:flex; align-items:center; gap:6px; margin-bottom:10px; }
+.attendance-row { display:flex; align-items:center; gap:6px; margin-bottom:12px; }
 
 .attendance-grid {
   display:grid;
-  grid-template-columns:repeat(5,1fr);
+  grid-template-columns:repeat(10, auto);
   gap:4px;
 }
 
@@ -56,22 +56,23 @@ button.NM { background:#999; color:white; }
 
 <body>
 <header>
-<h1>CYM Leader Tracker</h1>
-<div id="user-info"></div>
+  <h1>CYM Leader Tracker</h1>
+  <div id="user-info"></div>
 </header>
 
 <div class="container">
 
-<input id="username" placeholder="Full name..." style="width:100%;padding:6px;margin-bottom:10px;">
+<input id="username" placeholder="Type your full name..." style="width:100%;padding:6px;margin-bottom:10px;">
 
 <div class="month-selector" id="month-selector"></div>
 
 <div class="form-section">
-<h2 id="month-title"></h2>
-<h3>DEVOTION: <span id="devotion-count">0</span></h3>
-<div id="calendar" class="calendar"></div>
-<div id="attendance-forms" class="attendance-section"></div>
+  <h2 id="month-title"></h2>
+  <h3>DEVOTION: <span id="devotion-count">0</span> days checked</h3>
+  <div id="calendar" class="calendar"></div>
+  <div id="attendance-forms" class="attendance-section"></div>
 </div>
+
 </div>
 
 <script>
@@ -124,7 +125,7 @@ for(let d=1;d<=daysInMonth(currentMonth,currentYear);d++){
 const cell=document.createElement("div");
 const cb=document.createElement("input");
 cb.type="checkbox";
-const key=`dev_${currentYear}_${currentMonth}_${d}`;
+const key=`devotion_${currentYear}_${currentMonth}_${d}`;
 cb.checked=JSON.parse(localStorage.getItem(key))||false;
 if(cb.checked)count++;
 cb.onchange=()=>{localStorage.setItem(key,cb.checked);renderCalendar();};
@@ -136,7 +137,15 @@ document.getElementById("devotion-count").textContent=count;
 }
 
 function renderAttendance(){
-attendanceForms.innerHTML="<strong>FULL MONTH ATTENDANCE</strong><br><br>";
+attendanceForms.innerHTML=`
+<strong>FULL MONTH ATTENDANCE</strong><br>
+<small>
+<span style="color:#4CAF50;">Green – Present</span> |
+<span style="color:#f44336;">Red – Absent</span> |
+<span style="color:#999;">Gray – No Meeting</span>
+</small>
+<br><br>
+`;
 
 sections.forEach(section=>{
 attendanceForms.innerHTML+=`<strong>${section}</strong>`;
@@ -149,7 +158,7 @@ grid.className="attendance-grid";
 for(let w=1;w<=5;w++){
 const btn=document.createElement("button");
 btn.textContent=w+"W";
-const key=`att_${currentYear}_${currentMonth}_${section}_${w}`;
+const key=`attendance_${currentYear}_${currentMonth}_${section}_${w}`;
 btn.className=localStorage.getItem(key)||"";
 btn.onclick=()=>{
 btn.className=btn.className==="P"?"A":btn.className==="A"?"NM":"P";
@@ -157,14 +166,13 @@ localStorage.setItem(key,btn.className);
 };
 grid.appendChild(btn);
 
-// PER-WEEK INPUT (ONLY FOR W12 & CELL GROUP)
 if(section==="W12 MEETING"||section==="CELL GROUP"){
 const input=document.createElement("input");
 input.type="number";
-input.maxLength=2;
 input.min=0;
+input.max=99;
 input.className="week-input";
-const ikey=`count_${currentYear}_${currentMonth}_${section}_${w}`;
+const ikey=`attendees_${currentYear}_${currentMonth}_${section}_${w}`;
 input.value=localStorage.getItem(ikey)||"";
 input.oninput=()=>localStorage.setItem(ikey,input.value);
 grid.appendChild(input);
